# zap

./: .gitignore  .luaurc  CNAME  Cargo.toml  LICENSE  README.md  build.rs  config.ebnf  grammar.ebnf  package.json  shell.nix  test.zap
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: index.md  install.md  playground.md
docs/.vitepress/: config.mts  vite.config.ts
docs/.vitepress/components/: CodeBlock.vue  Editor.vue
docs/.vitepress/theme/: index.ts  style.css
docs/config/: events.md  functions.md  intro.md  options.md  types.md
docs/intro/: getting-started.md  what-is-zap.md
docs/usage/: events.md  generation.md
lib/: Cargo.toml
lib/src/: lib.rs  util.rs
lib/src/irgen/: gen.rs  mod.rs
lib/src/output/: mod.rs
lib/src/output/luau/: luau_base.luau  luau_client.luau  luau_server.luau  mod.rs
lib/src/parser/: grammar.lalrpop  mod.rs  working_ast.rs
src/: lib.rs  main.rs  util.rs
src/irgen/: gen.rs  mod.rs
src/output/: base.luau  client.rs  mod.rs  server.luau  server.rs
src/parser/: grammar.lalrpop  mod.rs
zap/: Cargo.toml  config.ebnf
zap/ast/: Cargo.toml
zap/ast/src/: lib.rs  visitor.rs
zap/ast_analyzer/: Cargo.toml
zap/ast_analyzer/src/: lib.rs
zap/ast_builder/: Cargo.toml
zap/ast_builder/src/: lib.rs
zap/driver/: Cargo.toml
zap/driver/src/: lib.rs  main.rs
zap/lexer/: Cargo.toml
zap/lexer/src/: lib.rs
zap/meta/: Cargo.toml
zap/meta/src/: files.rs  lib.rs  report.rs  span.rs
zap/src/: config.rs  lib.rs  main.rs  util.rs
zap/src/irgen/: des.rs  gen.rs  mod.rs  ser.rs
zap/src/output/: client.luau  client.rs  mod.rs  server.rs
zap/src/output/luau/: base.luau  client.luau  client.rs  mod.rs  server.luau  server.rs  types.rs
zap/src/output/typescript/: client.rs  mod.rs  server.rs
zap/src/parser/: ast.rs  convert.rs  grammar.lalrpop  lex.rs  lexer.rs  mod.rs  reports.rs  syntax_parse.rs  syntax_tree.rs  working_ast.rs
zap/token/: Cargo.toml
zap/token/src/: lib.rs
zapc/: Cargo.toml
zapc/src/: lib.rs  main.rs  range.rs  ty.rs
zapc/src/ast/: decl.rs  mod.rs  primitive.rs  range.rs  ty.rs
zapc/src/hir/: decl.rs  mod.rs  range.rs  scope.rs  ty.rs
zapc/src/hir_builder/: decl.rs  mod.rs  range.rs  scope.rs  ty.rs
zapc/src/lexer/: atom.rs  mod.rs  token.rs
zapc/src/meta/: files.rs  mod.rs  report.rs  span.rs
zapc/src/parser/: decl.rs  error.rs  mod.rs  primitive.rs  range.rs  ty.rs
zapc/zapc_ast/: Cargo.toml
zapc/zapc_ast/src/: lib.rs  visitor.rs
zapc/zapc_ast_builder/: Cargo.toml
zapc/zapc_ast_builder/src/: lib.rs  util.rs
zapc/zapc_ast_validate/: Cargo.toml
zapc/zapc_ast_validate/src/: lib.rs
zapc/zapc_driver/: Cargo.toml
zapc/zapc_driver/src/: lib.rs  main.rs
zapc/zapc_meta/: Cargo.toml
zapc/zapc_meta/src/: file.rs  lib.rs  report.rs  span.rs
zapc/zapc_token/: Cargo.toml
zapc/zapc_token/src/: lib.rs
