[package]
name = "cli"
authors = ["Redblox Organization"]
description = "A blazingly fast networking solution for Roblox."
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.11", features = ["derive"] }
codespan-reporting = "0.11.0"
zap = { path = "../zap" }

[[bin]]
name = "zap"
path = "src/main.rs"
