[package]
name = "zap"
authors = ["Redblox Organization"]
description = "A blazingly fast networking solution for Roblox."
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ariadne = "0.3.0"
chumsky = "0.9.3"
logos = "0.13.0"
num-traits = "0.2.17"
thiserror = "1.0"
wasm-bindgen = "0.2"
