[package]
name = "zap"
authors = ["Redblox Organization"]
description = "A blazingly fast networking solution for Roblox."
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
codespan-reporting = "0.11.1"
lalrpop-util = "0.20.2"
num-traits = "0.2.19"
wasm-bindgen = "0.2"
