[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
ast_builder = { path = "../ast_builder" }
ast_analyzer = { path = "../ast_analyzer" }
lexer = { path = "../lexer" }
meta = { path = "../meta" }
