[package]
name = "zapc_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zapc_meta = { path = "../zapc_meta" }
zapc_ast = { path = "../zapc_ast" }
zapc_ast_builder = { path = "../zapc_ast_builder" }
zapc_ast_validate = { path = "../zapc_ast_validate" }
zapc_token = { path = "../zapc_token" }
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
lasso = "0.7.2"
